--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,35 +1,37 @@
 [versions]
-activityKtx = "1.1.0"
+activityKtx = "1.9.1"
 agp = "8.5.2"
-androidxCore = "1.2.0"
-androidxJunit = "1.1.1"
-androidxLifecycleLifecycleExtensions10 = "2.2.0"
-coreTesting = "2.1.0"
-dexmakerMockito = "2.12.1"
-espressoCoreVersion = "3.2.0"
+androidxCore = "1.6.1"
+androidxJunit = "1.2.1"
+androidxLifecycleLifecycleExtensions10 = "2.8.3"
+coreTesting = "2.2.0"
+dexmakerMockito = "2.28.4"
+espressoCoreVersion = "3.6.1"
 glide = "4.11.0"
 compiler = "4.11.0"
 hamcrestAll = "1.3"
 hiltAndroidCompiler = "2.28-alpha"
-hiltAndroid = "2.28-alpha"
-hiltLifecycleViewmodel = "1.0.0-alpha02"
-hiltCompiler = "1.0.0-alpha02"
-junitJunitVersion = "4.13"
+hiltAndroid = "2.44"
+hiltLifecycleViewmodel = "1.0.0-alpha03"
+hiltCompiler = "1.2.0"
+junitJunitVersion = "4.13.2"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
-kotlinxCoroutinesCore = "1.7.1"
-kotlinxCoroutinesTest = "1.2.1"
-lifecycleRuntimeKtx = "2.8.4"
-lifecycleViewmodelKtx = "2.8.4"
+kotlinxCoroutinesCore = "1.7.3"
+kotlinxCoroutinesTest = "1.7.3"
+lifecycleCompiler = "2.8.4"
+lifecycleRuntimeKtx = "2.8.3"
+lifecycleViewmodelKtx = "2.8.3"
 material = "1.12.0"
 activity = "1.9.1"
 constraintlayout = "2.1.4"
-materialVersion = "1.3.0-alpha02"
-mockitoCore = "2.21.0"
+materialVersion = "1.12.0"
+mockitoAndroid = "5.13.0"
+mockitoCore = "5.13.0"
 navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 retrofit = "2.9.0"
@@ -37,8 +39,8 @@ robolectric = "4.3.1"
 roomRuntime = "2.6.1"
 timber = "4.7.1"
 truth = "1.4.4"
-junitJunit = "4.12"
-truthVersion = "1.0.1"
+junitJunit = "4.13.2"
+truthVersion = "1.4.4"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -49,6 +51,7 @@ androidx-espresso-core-v320 = { module = "androidx.test.espresso:espresso-core",
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
 androidx-hilt-lifecycle-viewmodel = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "hiltLifecycleViewmodel" }
 androidx-junit-v111 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
+androidx-lifecycle-compiler = { module = "androidx.lifecycle:lifecycle-compiler", version.ref = "lifecycleCompiler" }
 androidx-lifecycle-lifecycle-extensions12 = { module = "androidx.lifecycle:lifecycle-extensions", version.ref = "androidxLifecycleLifecycleExtensions10" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "androidxLifecycleLifecycleExtensions10" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycleLifecycleExtensions10" }
@@ -78,6 +81,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 material-v130alpha02 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+mockito-android = { module = "org.mockito:mockito-android", version.ref = "mockitoAndroid" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
